[tool.poetry]
name = "ex01"
version = "0.1.0"
description = "Matrix analysis"
authors = ["mhadir"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^3.0.1"
requests = "^2.25.1"
matplotlib = "^3.10.8"
numpy = "^2.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"